# default_mode_network

./: .dockerignore  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  IMPLEMENTATION_COMPLETE.md  INSTALL.md  MANIFEST.in  NETWORK_MANAGER_QUICKREF.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_new.md  SIMULATION_ENGINE_ANALYSIS.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
assets/logo/: README.md
docker/: docker-compose.yml
docs/: CELEGANS_IMPLEMENTATION.md  IMPLEMENTATION_ANALYSIS.md  SIMULATION_ENGINE_FIX.md  example_outputs.md  quickstart.md
docs/celegans/: CELEGANS_IMPLEMENTATION_SUMMARY.md  CELEGANS_STATUS.md
docs/experiments/: neuron_count_baseline.md
docs/plan/: architecture.md  celegans_graded_potential_design.md  implementation.md  self_awareness_architecture.md  vision.md
docs/prompts/: logo.prompt.md  seed.prompt.md
examples/: 01_basic_neuron_demo.py  02_network_topologies.py  03_probe_monitoring.py  04_default_mode_networks.py  05_self_aware_network.py  06_celegans_graded_neurons.py  07_network_manager_demo.py  EXAMPLE_OUTPUTS.md  README.md  README_CELEGANS.md  demo_expected_output.py  quickstart_simulation.py  test_celegans_basic.py  test_network_manager.py  working_neuron_demo.py
legacy/: README.md  dev-requirements.txt  requirements.txt
output/: .gitkeep  README.md
references/: research.txt
scripts/: README.md  build.bat  build.sh  run.bat  run.sh  setup.sh  setup_development.bat  setup_development.sh  setup_development_macos.sh  setup_platform.sh  setup_production.bat  setup_production.sh  setup_production_macos.sh  verify_installation.ps1  verify_installation.py  verify_structure.py
src/core/: __init__.py  event_system.py  simulation_engine.py
src/networks/: __init__.py  network_builder.py
src/neurons/: __init__.py  base_neuron.py  hh_neuron.py  lif_neuron.py  synapse.py
src/probes/: __init__.py  base_probe.py  network_probe.py  population_probe.py  spike_probe.py  voltage_probe.py
src/sdmn/: __init__.py  __main__.py  cli.py  version.py
src/sdmn/core/: __init__.py  simulation_engine.py  state_manager.py  time_manager.py
src/sdmn/networks/: __init__.py  network_builder.py
src/sdmn/networks/celegans/: __init__.py  network_manager.py
src/sdmn/neurons/: __init__.py  base_neuron.py  hh_neuron.py  lif_neuron.py  synapse.py
src/sdmn/neurons/graded/: __init__.py  celegans_neuron.py  graded_neuron.py  neuron_classes.py
src/sdmn/probes/: __init__.py  base_probe.py  network_probe.py  population_probe.py  spike_probe.py  voltage_probe.py
src/sdmn/synapses/: __init__.py  gap_junction.py  graded_synapse.py
tests/: __init__.py  conftest.py  test_core.py  test_integration.py  test_networks.py  test_neurons.py  test_probes.py
